force-app/main/default/objects/SVMXC__IOTConfiguration__c/SVMXC__IOTConfiguration__c.object-meta.xml
<CustomObject>
    <description>IOTConfiguration</description>
    <label>IOTConfiguration</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IOTConfigurations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>