force-app/main/default/objects/SVMXC__IOTConfiguration__c/fields/SVMXC__Contents__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Contents__c</fullName>
    <label>Contents</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>