force-app/main/default/objects/SVMXC__IOTConfiguration__c/fields/SVMXC__Name__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>